[gd_scene load_steps=7 format=3 uid="uid://dhfnajbbeodpr"]

[ext_resource type="Script" path="res://Scripts/other/heavy_round.gd" id="1_ttylc"]
[ext_resource type="Texture2D" uid="uid://bsm0hw5rrh0u7" path="res://Assets/Sprites/Other/BasicBullet.png" id="2_gcw1j"]
[ext_resource type="AudioStream" uid="uid://ftcbr7s3gr8c" path="res://Assets/Sound/SoundEffects/m1Garand.wav" id="3_327cf"]
[ext_resource type="AudioStream" uid="uid://dd1i2vbh06c4p" path="res://Assets/Sound/SoundEffects/lightRoundHit.wav" id="4_7nxuf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0vjhs"]
radius = 38.3275

[sub_resource type="CircleShape2D" id="CircleShape2D_w7cok"]
radius = 38.4708

[node name="heavyRound" type="CharacterBody2D"]
z_index = 2
script = ExtResource("1_ttylc")
Speed = 15000.0

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_gcw1j")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_0vjhs")
disabled = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_w7cok")

[node name="FireSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_327cf")
volume_db = 14.205
max_distance = 10000.0
bus = &"SFX"

[node name="CollisionSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_7nxuf")
max_distance = 6000.0
attenuation = 1.5
bus = &"SFX"

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
